testar form och innehåll på artiklar hälsa

--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <!-- Huvudtaggar här -->
-    <link rel="stylesheet" href="/artiklar/articles.css">
-    <title>Hälsa - Artiklar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hälsa | Din Webbplats</title>
+    <link rel="stylesheet" href="../css/articles.css">
 </head>
 <body>
-    <!-- Navigering här -->
-    <div class="category-container">
-        <h1>Hälsa - Artiklar</h1>
-        <div class="subcategories">
-            <a href="#frukostar">Frukostar</a>
-            <a href="#middagar">Middagar</a>
-            <a href="#näringslära">Näringslära</a>
-            <!-- Fler underkategorier -->
-        </div>
-        <section id="frukostar">
-            <h2>Frukostar</h2>
-            <div class="articles-list">
-                <!-- Lista med artiklar om hälsosamma frukostar -->
-            </div>
+    <header>
+        <!-- Din navigeringsmeny här -->
+    </header>
+
+    <main class="category-main">
+        <h1>Hälsa Artiklar</h1>
+        <section class="articles-list">
+            <!-- Artikel #1 -->
+            <article class="article-preview">
+                <h2>Titel på Artikel #1</h2>
+                <p>Kort sammanfattning av artikel #1...</p>
+                <a href="frukost/frukost-halsa1.html">Läs Mer</a>
+            </article>
+            <!-- Fler artiklar här -->
         </section>
-        <section id="middagar">
-            <h2>Middagar</h2>
-            <!-- Lista med artiklar om hälsosamma middagar -->
-        </section>
-        <!-- Fler sektioner för andra underkategorier -->
-    </div>
-    <!-- Fot och skript här -->
+    </main>
+
+    <footer>
+        <!-- Din footer här -->
+    </footer>
 </body>
 </html>
