testar leyout för artiklar igen

--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hälsa | Din Webbplats</title>
-    <link rel="stylesheet" href="../css/articles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hälsa Artiklar | Din Webbplats</title>
+    <!-- Behåll dina befintliga stilar och skript -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style2.css">
+    <link rel="stylesheet" href="../foodDays.css">
+    <link rel="stylesheet" href="../startsida-image-links.css">
 </head>
-<body>
-    <header>
-        <!-- Din navigeringsmeny här -->
-    </header>
 
-    <main class="category-main">
+<body>
+    <!-- Din befintliga navigationsmeny här -->
+    <!-- ... -->
+
+    <main class="content-container">
         <h1>Hälsa Artiklar</h1>
-        <section class="articles-list">
-            <!-- Artikel #1 -->
-            <article class="article-preview">
-                <h2>Titel på Artikel #1</h2>
-                <p>Kort sammanfattning av artikel #1...</p>
-                <a href="frukost/frukost-halsa1.html">Läs Mer</a>
-            </article>
-            <!-- Fler artiklar här -->
-        </section>
+        <div class="article-list">
+            <!-- Lista med artiklar om hälsa -->
+            <!-- Exempel på en artikel -->
+            <div class="article-preview">
+                <h2>Artikel Titel #1</h2>
+                <p>Kort sammanfattning av artikeln...</p>
+                <a href="frukost-halsa1.html">Läs mer</a>
+            </div>
+            <!-- Fler artikel-förhandsgranskningar här -->
+        </div>
     </main>
 
-    <footer>
-        <!-- Din footer här -->
-    </footer>
+    <!-- Din befintliga footer här -->
+    <!-- ... -->
+
+    <!-- Dina befintliga skript här -->
+    <!-- ... -->
 </body>
+
 </html>
