--- a/artiklar/halsa/frukost/frukost-halsa.html
+++ b/artiklar/halsa/frukost/frukost-halsa.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikelns Titel | Hälsa</title>
-    <link rel="stylesheet" href="../../css/articles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Artikel Titel | Din Webbplats</title>
+    <!-- Behåll dina befintliga stilar och skript -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../style2.css">
+    <link rel="stylesheet" href="../../foodDays.css">
+    <link rel="stylesheet" href="../../startsida-image-links.css">
 </head>
-<body>
-    <header>
-        <!-- Din navigeringsmeny här -->
-    </header>
 
-    <main class="article-main">
-        <article>
-            <h1>Titel på Artikel #1</h1>
-            <img src="path-to-article-image.jpg" alt="Beskrivning av bilden">
-            <p>Här är innehållet i din artikel...</p>
-            <!-- Resten av din artikel här -->
+<body>
+    <!-- Din befintliga navigationsmeny här -->
+    <!-- ... -->
+
+    <main class="content-container">
+        <article class="article-content">
+            <h1>Artikel Titel</h1>
+            <img src="path-to-article-image.jpg" alt="Artikelbild" class="article-image">
+            <p>Här skriver du hela artikeln...</p>
         </article>
     </main>
 
-    <footer>
-        <!-- Din footer här -->
-    </footer>
+    <!-- Din befintliga footer här -->
+    <!-- ... -->
+
+    <!-- Dina befintliga skript här -->
+    <!-- ... -->
 </body>
+
 </html>
