--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -7,10 +7,11 @@
     <title>Hälsa Artiklar | Din Webbplats</title>
     <!-- Behåll dina befintliga stilar och skript -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../style2.css">
-    <link rel="stylesheet" href="../foodDays.css">
-    <link rel="stylesheet" href="../startsida-image-links.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../style2.css">
+    <link rel="stylesheet" href="../../foodDays.css">
+    <link rel="stylesheet" href="../../startsida-image-links.css">
+
 </head>
 
 <body>
