--- a/startsida2.html
+++ b/startsida2.html
@@ -11,10 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
-    <link rel="stylesheet" href="startsida-image-links.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../style2.css">
+    <link rel="stylesheet" href="../../foodDays.css">
+    <link rel="stylesheet" href="../../startsida-image-links.css">
+
 
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
