--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -22,21 +22,21 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="startsida2.html" class="nav__link">
+                <a href="../../startsida2.html" class="nav__link">
                     <span class="nav__text">
                         Startsida
                     </span>
                 </a>
             </li>
             <li class="nav__item">
-                <a href="generator.html" class="nav__link">
+                <a href="../../generator.html" class="nav__link">
                     <span class="nav__text">
                         Mat-Generatorn
                     </span>
                 </a>
             </li>
             <li class="nav__item">
-                <a href="index.html" class="nav__link">
+                <a href="../../index.html" class="nav__link">
                     <span class="nav__text">
                         Ingrediens-Assistenten
                     </span>
@@ -95,7 +95,7 @@
             </li>
 
             <li class="nav__item">
-                <a href="contact.html" class="nav__link">
+                <a href="../../contact.html" class="nav__link">
                     <span class="nav__text">
                         Kontakt
                     </span>
