--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -4,17 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#faf0ca">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <title>Hälsa Artiklar | Din Webbplats</title>
     <!-- Behåll dina befintliga stilar och skript -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../style2.css">
     <link rel="stylesheet" href="../../foodDays.css">
     <link rel="stylesheet" href="../../startsida-image-links.css">
 
+    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
 
 <body>
+
+    <div id="overlay" hidden></div>
+
     <nav class="nav">
         <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation" />
         <label class="nav__trigger-finger" for="trigger">
@@ -103,6 +111,14 @@
             </li>
         </ul>
     </nav>
+
+    <a href="startsida2.html" class="logo-link">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+    </a>
+
+
+
+    <div class="background-container"></div>
 
     <main class="content-container">
         <h1>Hälsa Artiklar</h1>
