--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -112,8 +112,8 @@
         </ul>
     </nav>
 
-    <a href="startsida2.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+    <a href="../../startsida2.html" class="logo-link">
+        <img src="../../images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
 
