--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../foodDays.css">
     <link rel="stylesheet" href="../../startsida-image-links.css">
 
-    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
 </head>
 
 <body>
