--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#faf0ca">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <title>Hälsa Artiklar | Din Webbplats</title>
+
     <!-- Behåll dina befintliga stilar och skript -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../style2.css">
     <link rel="stylesheet" href="../../foodDays.css">
@@ -119,6 +119,15 @@
 
 
     <div class="background-container"></div>
+
+    <div class="video-container">
+        <video autoplay muted loop id="myVideo">
+            <source src="../../path/to/your/video.mp4" type="video/mp4">
+            Din webbläsare stöder inte videouppspelning.
+        </video>
+    </div>
+
+    <title>Hälsa Artiklar | Din Webbplats</title>
 
     <main class="content-container">
         <h1>Hälsa Artiklar</h1>
