--- a/artiklar/halsa/halsa.html
+++ b/artiklar/halsa/halsa.html
@@ -122,7 +122,7 @@
 
     <div class="video-container">
         <video autoplay muted loop id="myVideo">
-            <source src="../../path/to/your/video.mp4" type="video/mp4">
+            <source src="../../images/videos/videos-startsida/pizzamozzarella.mp4" type="video/mp4">
             Din webbläsare stöder inte videouppspelning.
         </video>
     </div>
