--- a/startsida2.html
+++ b/startsida2.html
@@ -69,9 +69,9 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#hoi" class="nav__link">
+                        <a href="artiklar/Koksredskap/koksredskap-mainpage.html" class="nav__link">
                             <span class="nav__text">
-                                Inredning
+                                Köksredskap
                             </span>
                         </a>
                     </li>
