--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -116,7 +116,7 @@
     </a>
 
 
-
+    <div class="background-container"></div>
 
     <main class="content-container">
         <h1>Köksredskap</h1>
