--- a/images/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/images/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -124,19 +124,19 @@
         <div class="article-grid">
             <!-- Artikelförhandsvisningar -->
             <div class="article-preview">
-                <img src="../../images/artiklar/Koksredskap/stekpanna/stekpanna1.jpeg" alt="Stekpannor">
+                <img src="../../images/articles/stekpannor.jpg" alt="Stekpannor">
                 <h2>Bästa Stekpannorna 2024</h2>
                 <p>En guide till hållbara bra stekpannor</p>
                 <a href="stekpannor-artikel.html">Läs mer</a>
             </div>
             <div class="article-preview">
-                <img src="../../images/artiklar/Koksredskap/knivar/kniv1.jpeg" alt="Knivar">
+                <img src="../../images/articles/knivar.jpg" alt="Knivar">
                 <h2>Vassa val: Knivar för köket</h2>
                 <p>Recensioner och rekommendationer för att välja rätt knivar för ditt kök.</p>
                 <a href="knivar-artikel.html">Läs mer</a>
             </div>
             <div class="article-preview">
-                <img src="../../images/artiklar/inredning/hemdesign1.jpg" alt="Köksinredning">
+                <img src="../../images/" alt="Köksinredning">
                 <h2>Köksinredning som inspirerar</h2>
                 <p>Trender och tips för en praktisk och stilfull köksinredning.</p>
                 <a href="köksinredning-artikel.html">Läs mer</a>
