--- a/artiklar/Koksredskap/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -126,19 +126,19 @@
             <div class="article-preview">
                 <img src="/images/artikel-bilder/koksredskap-bilder/stekpanna/stekpanna1.jpeg" alt="Stekpannor">
                 <h2>Bästa Stekpannorna 2024</h2>
-                <p>En guide till hållbara bra stekpannor</p>
+                <p>En guide till hållbara lättanvända stekpannor</p>
                 <a href="stekpannor-artikel.html">Läs mer</a>
             </div>
             <div class="article-preview">
                 <img src="/images/artikel-bilder/koksredskap-bilder/knivar/kniv1.jpeg" alt="Knivar">
                 <h2>Vassa val: Knivar för köket</h2>
-                <p>Recensioner och rekommendationer för att välja rätt knivar för ditt kök.</p>
+                <p>Hur man kan välja rätt knivar för sitt kök.</p>
                 <a href="knivar-artikel.html">Läs mer</a>
             </div>
             <div class="article-preview">
                 <img src="/images/artikel-bilder/inredning-bilder/hemdesign1.jpg" alt="Köksinredning">
                 <h2>Köksinredning som inspirerar</h2>
-                <p>Trender och tips för en praktisk och stilfull köksinredning.</p>
+                <p>Trender och tips för praktisk och hemtrevlig köksinredning.</p>
                 <a href="köksinredning-artikel.html">Läs mer</a>
             </div>
             <!-- Fler artiklar kan läggas till här -->
