--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -17,6 +17,9 @@
     <!-- Fler länkar till stilar och skript kan läggas till här -->
 
     <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
+
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
