--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,9 +19,12 @@
 
     <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
 
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
 
     <div id="overlay" hidden></div>
@@ -119,7 +123,7 @@
     </a>
 
 
-    
+
 
     <main class="content-container">
         <h1>Köksredskap</h1>
@@ -155,4 +159,5 @@
     <!-- ... -->
 
 </body>
+
 </html>
