--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Lägg till denna länk i din head-tagg -->
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+    <!-- Lägg till denna länk i din head-tagg 
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    
     <meta name="theme-color" content="#faf0ca">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
