testar att försöka bestämma fast storlek på bakgrund till titlat i ingrediens-assistenten

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             var htmlContent = '';
             pageData.forEach((row, index) => {
                 htmlContent += `<div class="matratt">`;
-                htmlContent += `<div class="matratt-title"><h2>${row[0]}</h2></div>`; // Maträttens namn
+                htmlContent += `<div class="matratt-title title-background"><h2>${row[0]}</h2></div>`; // Maträttens namn
 
                 /* // Knapp för att visa ingredienser
                 htmlContent += `<button class="ingrediens-knapp" onclick="toggleIngredienser(this)">Visa Ingredienser</button>`;
