--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -132,7 +132,7 @@
             <!-- Artikelförhandsvisningar -->
             <div class="article-preview">
                 <img src="../../images/artikel-bilder/koksredskap-bilder/stekpanna/stekpanna1.jpeg" alt="Stekpannor">
-                <h2>Att vet om vid köp av stekpanna</h2>
+                <h2>Bra att veta om vid köp av stekpanna</h2>
                 <p>En guide till hållbara lättanvända stekpannor</p>
                 <a href="stekpannor-artikel.html">Läs mer</a>
             </div>
