försöker se till att sökresultatet på matgeneratorn ser ut som på ingrediensassistenten med 2 i bredd.

--- a/generator.html
+++ b/generator.html
@@ -305,6 +305,16 @@
     <!-- Plats för att visa matchande Instagram-inlägg -->
     <!-- <div id="instagram-results-container"></div> -->
 
+    <div class="matratt-container">
+        <div class="matratt">
+            <!-- Instagram Embed Code kommer att placeras här -->
+        </div>
+        <div class="matratt-info">
+            <h2 class="matratt-title">Titel på maträtt</h2>
+            <!-- Övrig information om maträtten, som kategori, protein etc -->
+        </div>
+    </div>
+
 
     <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
 
