--- a/generator.html
+++ b/generator.html
@@ -299,7 +299,7 @@
     <!-- Sök Knapp -->
     <button id="searchBtn" class="big-button">Sök</button>
 
-    <div id="results-container"></div>
+    <div id="data-container"></div>
 
 
     <!-- Plats för att visa matchande Instagram-inlägg -->
