--- a/generator.html
+++ b/generator.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
-   
+
     <link rel="stylesheet" href="style2.css">
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
@@ -122,9 +122,11 @@
 
     <div class="background-container"></div>
 
+    <div class="top-space"></div>
+
     <!-- Ny bild för text under logotypen -->
     <div class="text-image">
-        <img src="images/matgeneratorn-text.svg" alt="Text Image">
+        <img src="images/matgeneratorntext2.svg" alt="Text Image">
     </div>
 
     <div class="welcome-text">
