--- a/startsida2.html
+++ b/startsida2.html
@@ -156,6 +156,8 @@
 
     <div class="background-container"></div>
 
+    <div class="top-space"></div>
+
     <video id="randomVideo" autoplay loop muted playsinline preload="auto">
         Din webbläsare stöder inte videouppspelning.
     </video>
