--- a/generator.html
+++ b/generator.html
@@ -319,6 +319,8 @@
     </div> -->
     <script src="generator.js"></script>
 
+    <script async src="//www.instagram.com/embed.js"></script>
+
 </body>
 
 </html>
