--- a/artiklar/Koksredskap/koksredskap-mainpage.html
+++ b/artiklar/Koksredskap/koksredskap-mainpage.html
@@ -122,7 +122,7 @@
         <img src="../../images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
-
+    <div class="top-space"></div>
 
 
     <main class="content-container">
