--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,8 @@
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
+    <div class="top-space"></div>
+    
     <!-- Bild för text under logotypen -->
     <div class="text-image">
         <img src="images/kontaktaossrubrik.svg" alt="Text Image">
