--- a/generator.html
+++ b/generator.html
@@ -168,7 +168,7 @@
         <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
             <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
         </div>
-        <div class="image-button hidden" data-category="mealtype" data-filter="efterattfika">
+        <div class="image-button hidden" data-category="mealtype" data-filter="fika">
             <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
