--- a/generator.html
+++ b/generator.html
@@ -146,7 +146,7 @@
         <div class="image-button" data-category="mealtype" data-filter="pasta">
             <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
         </div>
-        <div class="image-button" data-category="mealtype" data-filter="forattertilltugg">
+        <div class="image-button" data-category="mealtype" data-filter="forratter">
             <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
         </div>
         <div class="image-button" data-category="mealtype" data-filter="streetfood">
