testar att skapa menyremsa som innehåll scrollas under på startsida

--- a/startsida2.html
+++ b/startsida2.html
@@ -28,6 +28,17 @@
 
     <div id="overlay" hidden></div>
 
+    <header class="site-header">
+        <a href="startsida2.html" class="logo-link">
+            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+        </a>
+
+
+    
+
+
+    
+
     <nav class="nav">
         <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation" />
         <label class="nav__trigger-finger" for="trigger">
@@ -147,6 +158,8 @@
             </li>
         </ul>
     </nav>
+
+</header>
 
     <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
