lägger till usa som knapp

--- a/generator.html
+++ b/generator.html
@@ -268,6 +268,9 @@
         <div class="image-button hidden" data-category="country" data-filter="grekland">
             <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
         </div>
+        <div class="image-button hidden" data-category="country" data-filter="usa">
+            <img src="images/knappargenerator/knappar/usa.png" alt="USA" />
+        </div>
         <div class="image-button hidden" data-category="country" data-filter="asien">
             <img src="images/knappargenerator/knappar/asien.png" alt="Asien" />
         </div>
