ändrar visa fler knapparna i matgeneratorn från text ill plus och minus bilder

--- a/generator.html
+++ b/generator.html
@@ -173,8 +173,13 @@
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
-        <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div>
+        <!-- Lägg till en "Visa fler"-knapp här 
+        <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div> -->
+
+        <div class="show-more-btn" data-target="mealtype" data-expanded="false">
+            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+        </div>
+        
 
     </div>
 
