--- a/generator.html
+++ b/generator.html
@@ -225,7 +225,9 @@
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="proteins" data-expanded="false">Visa fler</div>
+        <div class="show-more-btn" data-target="proteins" data-expanded="false">
+            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+        </div>
 
     </div>
 
@@ -297,7 +299,9 @@
         <!-- Lägg till fler dolda knappar efter behov -->
 
         <!-- Lägg till en "Visa fler"-knapp här -->
-        <div class="show-more-btn" data-target="countries" data-expanded="false">Visa fler</div>
+        <div class="show-more-btn" data-target="countries" data-expanded="false">
+            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+        </div>
 
     </div>
 
