kommenterat bort funktionen på ingredienstassistentsidan gällande att sökfältet försvinner när man scrollar nedåt, nu är det statiskt.

--- a/index.html
+++ b/index.html
@@ -580,6 +580,9 @@
             const tagContainer = document.querySelector('.tag-container');
             let lastScrollTop = 0;
 
+
+         // Ta bort eller kommentera bort denna del av koden för att förhindra att sökfältet göms vid scrollning
+    /*
             window.addEventListener('scroll', function () {
                 var currentScroll = window.pageYOffset || document.documentElement.scrollTop;
 
@@ -600,6 +603,7 @@
                 }
                 lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
             }, false);
+            */
         });
 
 
