--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,17 @@
 
     <div id="overlay" hidden></div>
 
+    <header class="site-header">
+        <a href="startsida2.html" class="logo-link">
+            <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+        </a>
+
+
+    
+
+
+    
+
     <nav class="nav">
         <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation" />
         <label class="nav__trigger-finger" for="trigger">
@@ -40,16 +51,42 @@
             <li class="nav__item">
                 <a href="generator.html" class="nav__link">
                     <span class="nav__text">
-                        Generatorn
+                        Mat-Generatorn
                     </span>
                 </a>
             </li>
             <li class="nav__item">
                 <a href="index.html" class="nav__link">
                     <span class="nav__text">
-                        Ingredienser
+                        Ingrediens-Assistenten
                     </span>
                 </a>
+            </li>
+
+            <li class="nav__item">
+                <a href="#hoi" class="nav__link">
+                    <span class="nav__text">
+                        Artiklar
+                    </span>
+                </a>
+                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger-articles" /> <!-- Uppdaterat ID -->
+                <label class="nav__submenu-trigger-finger" for="submenu-trigger-articles"></label> <!-- Uppdaterat för-attribut -->
+                <ul class="nav__list-child">
+                    <li class="nav__item">
+                        <a href="artiklar/halsa/halsa.html" class="nav__link">
+                            <span class="nav__text">
+                                Hälsa
+                            </span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="artiklar/Koksredskap/koksredskap-mainpage.html" class="nav__link">
+                            <span class="nav__text">
+                                Köksredskap
+                            </span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
@@ -117,6 +154,8 @@
             </li>
         </ul>
     </nav>
+
+</header>
 
     <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
