--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,11 @@
     <meta name="theme-color" content="#faf0ca">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <title>Din Startsida Titel</title>
+    <title>Instarecept</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
